[package]
name = "task_scheduler"
version = "0.1.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fuchsnj/task_scheduler"
license = "MIT/Apache-2.0"
description = """
A library to easilty schedule an FnOnce to run in the future
"""

[dependencies]