[package]
name = "task_scheduler"
version = "0.2.0"
edition = "2018"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fuchsnj/task_scheduler"
license = "MIT/Apache-2.0"
description = """
A library to easilty schedule an FnOnce to run in the future
"""

[badges]
travis-ci = { repository = "fuchsnj/task_scheduler" }

[dependencies]